[gd_scene load_steps=2 format=3 uid="uid://b5boqwaofmebh"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_i0eqw"]

[node name="GameManager" type="Node"]
script = ExtResource("1_i0eqw")

[node name="ScatterTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ScatterFlashTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="timeout" from="ScatterTimer" to="." method="_on_scatter_timer_timeout"]
[connection signal="timeout" from="ScatterFlashTimer" to="." method="_on_scatter_flash_timer_timeout"]
